Adjusted pom for java 11 update