@@ -84,6 +84,14 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <goals>install</goals>
+                    <autoVersionSubmodules>true</autoVersionSubmodules>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
                 <version>2.7</version>
@@ -102,6 +110,9 @@
                 <configuration>
                     <additionalClasspathElements>${basedir}/target/classes</additionalClasspathElements>
                     <parallel>none</parallel>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
                 </configuration>
                 <executions>
                     <execution>
@@ -114,5 +125,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
